--- a/rro_overlays/CarrierConfigOverlay/AndroidManifest.xml
+++ b/rro_overlays/CarrierConfigOverlay/AndroidManifest.xml
@@ -18,7 +18,7 @@
     package="com.android.carrierconfig.msmnile"
     android:versionCode="1"
     android:versionName="1.0">
-    <application android:hasCode="false" />
+    <application android:hasCode="false"  android:allowBackup="false"/>
     <overlay
       android:targetPackage="com.android.carrierconfig"
       android:isStatic="true"
