--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -63,6 +63,17 @@ on init
     chown system system /sys/module/qti_haptics/parameters/vmax_mv_override
     chmod 0664 /sys/module/qti_haptics/parameters/vmax_mv_override
 
+service vendor.camera-provider-2-4 /vendor/bin/hw/android.hardware.camera.provider@2.4-service_64
+    override
+    interface android.hardware.camera.provider@2.4::ICameraProvider legacy/0
+    interface vendor.qti.hardware.camera.postproc@1.0::IPostProcService camerapostprocservice
+    class hal
+    user cameraserver
+    group audio camera input drmrpc oem_2907
+    ioprio rt 4
+    capabilities SYS_NICE
+    writepid /dev/cpuset/camera-daemon/tasks /dev/stune/foreground/tasks
+
 on early-fs
     start vold
 
@@ -83,6 +94,13 @@ on fs
     chmod 660 /dev/tiload_node
 
     mkdir /mnt/vendor/persist/subsys 0770 root system
+
+    # Camera Server permissions
+    chown cameraserver cameraserver /dev/cpuset/camera-daemon
+    chown cameraserver cameraserver /dev/cpuset/camera-daemon/tasks
+    chown cameraserver cameraserver /mnt/vendor/persist/camera
+    chmod 0660 /dev/cpuset/camera-daemon/tasks
+    chmod 0775 /data/vendor/camera
 
 on post-fs
     # set RLIMIT_MEMLOCK to 64MB
